app/_scss/main.scss
@charset "utf-8";



// Our variables
$base-font-family: ff-tisa-web-pro, serif;
$base-font-size:   16px;
$small-font-size:  $base-font-size * 0.875;
$base-line-height: 1.5;

$spacing-unit:     30px;

$text-color:       #111;
$background-color: #fdfdfd;
$brand-color:      #6B90B5;

$grey-color:       #828282;
$grey-color-light: lighten($grey-color, 40%);
$grey-color-dark:  darken($grey-color, 25%);

$on-palm:          600px;
$on-laptop:        800px;

$accent-color:     #6B90B5;


@import
        "compass/utilities/general/clearfix",
        "media-queries",
        "base",
        "layout",
        "syntax-highlighting",
        "resume"
;


// Don's Styles
h1 {
	font: {
		family: proxima-nova, sans-serif;
		size: 4em;
		weight: normal;		
	}
	color: $accent-color;
}

.site-title {
	line-height: 0.8em;
	font-size: 112px;
}

%bars {
	content: "";
	background-color: inherit;
	position: absolute;
	top:0;
	bottom:0;
	width:9999px;
}
header {
	margin: 20px auto;
	max-width: 1100px;
	.header-picture {
		margin:20px;
		z-index: 1;
		position: relative;
	}
	.crop-wrap {
		float:left;
		width: 60%;
	}
	.title-and-nav {

	}
	.site-title{
		padding-left: 50%;
	}
	nav {
		font-family: "proxima-nova", sans-serif;
		font-weight: light;
		font-size: 40px;
		
		a, a:visited {
			display: block;
			color: black;
			padding:0 10px;
			padding-left: 65%;

			&:hover {
				color: black;
				background-color: $accent-color;
				text-decoration: none;
				position: relative;
				z-index: 0;


				&:before {
					@extend %bars;
					left:-9999px;
				}
				&:after {
					@extend %bars;
					right:-9999px;
				}
			}
		}
	}
	@include clearfix;
}

.crop-wrap {
    max-width: 640px;
    width: 100%; /*whatever width you want*/
    display: block;
    position: relative;
    margin-left: auto;
    margin-right: auto;
}
.crop-wrap:after {
    /* the padding value shown here should be overridden programmatically
       to ensure that the cropping looks like the desired ratio on screen */
    padding-top: 100%; // 1x1 ratio (1/1)
    //padding-top: 75%; // 4x3 ratio (3/4)
    //padding-top: 56.25%; // 16x9 ratio (9/16)
    display: block;
    content: '';
}
.crop {
    position: absolute;
    top: 0; bottom: 0; right: 0; left: 0; /*fill parent*/
    //background-color: rgb(0, 140, 200); /*let's see it!*/
    background-repeat: no-repeat;
    background-size: cover;
    border: 10px solid $accent-color;
    border-radius: 1000%;
    
    &.left {
      background-position: 0%;
    }
    &.center {
      background-position: 50% 50%;
    }
    &.right {
      background-position: 100%;
    }
    &.top {
      background-position:0 0%;
    }
    &.bottom {
      background-position:0 100%;
    }
}

.announcements {
	font-size: 36px;
	font-family: "proxima-nova";
	font-weight: normal;
	font-style: italic;
	max-width: 1100px;
	margin: 60px auto;
	ul {
		list-style: none;
		margin:0;
		padding: 0;
	}
}

aside {
	font-family: "proxima-nova";
	font-size: 45px;
	padding: 2em 20px;
	background-color: $accent-color;
	color: white;
	
	blockquote {
		color: white;
		border: none;
		font-weight: bold;
		font-style: italic;
		font-size: 45px;
		line-height: 1em;
		max-width: 740px;
		margin: auto;

		&:after {
			content: "\201d";
			margin-left: 0.05em;
		}
		&:before {
			content: "\201c";
			margin-left: -0.35em;
			margin-right: 0.05em;
		}
	}

}
.credit {
	font-family: "proxima-nova-extra-condensed";
	font-weight: light;
	font-style: italic;
	color: lighten($accent-color, 10);
	max-width: 740px;
	margin: auto;
	margin-top: 0.5em;
	text-align: right;

}

